@@ -6236,6 +6236,43 @@ name|dfsCluster
 return|;
 block|}
 specifier|public
+name|void
+name|setDFSCluster
+parameter_list|(
+name|MiniDFSCluster
+name|cluster
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|dfsCluster
+operator|!=
+literal|null
+operator|&&
+name|dfsCluster
+operator|.
+name|isClusterUp
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"DFSCluster is already running! Shut it down first."
+argument_list|)
+throw|;
+block|}
+name|this
+operator|.
+name|dfsCluster
+operator|=
+name|cluster
+expr_stmt|;
+block|}
+specifier|public
 name|FileSystem
 name|getTestFileSystem
 parameter_list|()
