@@ -489,6 +489,16 @@ name|org
 operator|.
 name|junit
 operator|.
+name|AfterClass
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
 name|Before
 import|;
 end_import
@@ -865,7 +875,7 @@ argument_list|)
 expr_stmt|;
 name|TEST_UTIL
 operator|.
-name|startMiniCluster
+name|startMiniDFSCluster
 argument_list|(
 literal|3
 argument_list|)
@@ -893,19 +903,10 @@ argument_list|()
 expr_stmt|;
 name|hbaseDir
 operator|=
-operator|new
-name|Path
-argument_list|(
 name|TEST_UTIL
 operator|.
-name|getConfiguration
+name|createRootDir
 argument_list|()
-operator|.
-name|get
-argument_list|(
-literal|"hbase.rootdir"
-argument_list|)
-argument_list|)
 expr_stmt|;
 name|oldLogDir
 operator|=
@@ -927,6 +928,22 @@ argument_list|,
 name|getName
 argument_list|()
 argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|AfterClass
+specifier|public
+specifier|static
+name|void
+name|tearDownAfterClass
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|TEST_UTIL
+operator|.
+name|shutdownMiniDFSCluster
+argument_list|()
 expr_stmt|;
 block|}
 specifier|private
@@ -1528,6 +1545,15 @@ name|total
 init|=
 literal|20
 decl_stmt|;
+name|HLog
+operator|.
+name|Reader
+name|reader
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
 name|HRegionInfo
 name|info
 init|=
@@ -1638,11 +1664,8 @@ operator|.
 name|computeFilename
 argument_list|()
 decl_stmt|;
-name|HLog
-operator|.
-name|Reader
 name|reader
-init|=
+operator|=
 name|HLog
 operator|.
 name|getReader
@@ -1653,7 +1676,7 @@ name|walPath
 argument_list|,
 name|conf
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 name|int
 name|count
 init|=
@@ -2047,6 +2070,32 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|wal
+operator|!=
+literal|null
+condition|)
+name|wal
+operator|.
+name|closeAndDelete
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|reader
+operator|!=
+literal|null
+condition|)
+name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 comment|/**    * Test the findMemstoresWithEditsEqualOrOlderThan method.    * @throws IOException    */
 annotation|@
@@ -2814,6 +2863,13 @@ argument_list|,
 literal|null
 argument_list|)
 expr_stmt|;
+name|TEST_UTIL
+operator|.
+name|setDFSCluster
+argument_list|(
+name|cluster
+argument_list|)
+expr_stmt|;
 name|cluster
 operator|.
 name|waitActive
@@ -3174,6 +3230,12 @@ decl_stmt|;
 name|HLog
 name|log
 init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|log
+operator|=
 operator|new
 name|HLog
 argument_list|(
@@ -3185,9 +3247,7 @@ name|oldLogDir
 argument_list|,
 name|conf
 argument_list|)
-decl_stmt|;
-try|try
-block|{
+expr_stmt|;
 comment|// Write columns named 1, 2, 3, etc. and then values of single byte
 comment|// 1, 2, 3...
 name|long
@@ -4352,6 +4412,8 @@ argument_list|,
 name|conf
 argument_list|)
 decl_stmt|;
+try|try
+block|{
 name|DumbWALActionsListener
 name|visitor
 init|=
@@ -4593,6 +4655,21 @@ name|increments
 argument_list|)
 expr_stmt|;
 block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|log
+operator|!=
+literal|null
+condition|)
+name|log
+operator|.
+name|closeAndDelete
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 annotation|@
 name|Test
 specifier|public
@@ -4648,6 +4725,8 @@ argument_list|,
 name|conf
 argument_list|)
 decl_stmt|;
+try|try
+block|{
 name|HRegionInfo
 name|hri
 init|=
@@ -4890,6 +4969,21 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|log
+operator|!=
+literal|null
+condition|)
+name|log
+operator|.
+name|closeAndDelete
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 comment|/**    * A loaded WAL coprocessor won't break existing HLog test cases.    */
 annotation|@
 name|Test
@@ -4916,6 +5010,8 @@ argument_list|,
 name|conf
 argument_list|)
 decl_stmt|;
+try|try
+block|{
 name|WALCoprocessorHost
 name|host
 init|=
@@ -4944,6 +5040,21 @@ argument_list|(
 name|c
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|log
+operator|!=
+literal|null
+condition|)
+name|log
+operator|.
+name|closeAndDelete
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 specifier|private
 name|void
